[gd_scene load_steps=10 format=3 uid="uid://cvbef8glgtoe"]

[ext_resource type="Script" uid="uid://bc2c0e3rtnkqw" path="res://Scripts/add_waiter_form.gd" id="1_3l3l3"]
[ext_resource type="Texture2D" uid="uid://bnv11uj1ivdbi" path="res://Assets/UI/InnerPanel.png" id="1_o6oae"]
[ext_resource type="FontFile" uid="uid://cklnct7lhakjq" path="res://Assets/Fonts/SometypeMono-VariableFont_wght.ttf" id="2_1e8rt"]
[ext_resource type="Texture2D" uid="uid://c5cvt3b1w4qj6" path="res://Assets/UI/ButtonActiveRounded.png" id="3_tkv2v"]
[ext_resource type="Texture2D" uid="uid://bcg0463xcvfd0" path="res://Assets/UI/ButtonDefaultRounded.png" id="4_f3ook"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3l3l3"]
texture = ExtResource("3_tkv2v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0qs5k"]
texture = ExtResource("4_f3ook")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tkv2v"]
texture = ExtResource("3_tkv2v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f3ook"]
texture = ExtResource("4_f3ook")

[node name="AddWaiterForm" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3l3l3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -46.0
offset_right = 69.0
offset_bottom = 47.0
texture = ExtResource("1_o6oae")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -113.0
offset_right = 10.0
offset_bottom = -113.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_1e8rt")
theme_override_font_sizes/font_size = 40
text = "ADD WAITER
"
vertical_alignment = 1

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1e8rt")
theme_override_font_sizes/font_size = 30
text = "Name: "
vertical_alignment = 1

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/NameContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1e8rt")
theme_override_font_sizes/font_size = 30
placeholder_text = "\"Ex: Antonio\""
expand_to_text_length = true

[node name="SurnameContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/SurnameContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1e8rt")
theme_override_font_sizes/font_size = 30
text = "Surname: "
vertical_alignment = 1

[node name="SurnameEdit" type="LineEdit" parent="VBoxContainer/SurnameContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1e8rt")
theme_override_font_sizes/font_size = 30
placeholder_text = "\"Ex: Caldero\""
expand_to_text_length = true

[node name="HBoxContainerButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 80
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainerButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1e8rt")
theme_override_font_sizes/font_size = 30
theme_override_styles/pressed = SubResource("StyleBoxTexture_3l3l3")
theme_override_styles/normal = SubResource("StyleBoxTexture_0qs5k")
text = "Cancel "

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainerButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1e8rt")
theme_override_font_sizes/font_size = 30
theme_override_styles/pressed = SubResource("StyleBoxTexture_tkv2v")
theme_override_styles/normal = SubResource("StyleBoxTexture_f3ook")
text = "Add "
